Fix intro text size on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11911,10 +11911,16 @@ textarea.form-control-lg {
   font-weight: 700;
 }
 .display-2--description {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   display: block;
   text-transform: none;
   margin-top: 1.2rem;
+}
+@media (min-width: 992px) {
+  .display-2--description {
+    font-size: 1.4rem;
+    display: inline-block;
+  }
 }
 
 .menu {
