--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -12,9 +12,14 @@
   }
 
   &--description {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     display: block;
     text-transform: none;
     margin-top: 1.2rem;
+
+    @include media-breakpoint-up(lg) {
+      font-size: 1.4rem;
+      display: inline-block;
+    }
   }
 }
